@@ -696,6 +696,7 @@ AttachmentPane.openWith.title=Open Attachment With
 AttachmentPane.Actions.Open.Label=Open
 AttachmentPane.Actions.OpenWith.Label=Open With
 AttachmentPane.Actions.SaveAs.Label=Save As
+AttachmentPane.Actions.SaveAll.Label=Save All
 AttachmentPane.NewMsgActions.Remove.Label=Remove
 
 PrintDisplay.status.rendering=Rendering
