@@ -119,10 +119,11 @@ MessageNotificationManager.popupMenu.Exit.Action=file-exit
 
 AttachmentPane=ContentType
 AttachmentPane.ContentType=Content-Type
-AttachmentPane.Actions=Open:OpenWith:SaveAs
+AttachmentPane.Actions=Open:OpenWith:SaveAs:SaveAll
 AttachmentPane.Actions.Open.Action=file-open
 AttachmentPane.Actions.OpenWith.Action=file-open-with
 AttachmentPane.Actions.SaveAs.Action=file-save-as
+AttachmentPane.Actions.SaveAll.Action=file-save-all
 AttachmentPane.NewMsgActions=Remove
 AttachmentPane.NewMsgActions.Remove.Action=file-remove
 
